# last-diff-analyzer

./: .gitignore  BUILD.bazel  INSTALL  NOTICE  README.md  REQUIREMENTS  STATUS  WORKSPACE  go.mod  go.sum
analyzer/: BUILD.bazel  analyzer.go  analyzer_test.go
analyzer/bazel/: BUILD.bazel  analyzer.go  ast_equivalence.go  ast_util.go
analyzer/common/: BUILD.bazel  types.go
analyzer/core/: BUILD.bazel  analyzer.go  ir_util.go
analyzer/core/check/: BUILD.bazel  common.go  common_test.go  generic.go  generic_test.go  golang.go  golang_logging_helper.go  golang_symbolicated.go  java.go  java_logging_helper.go  java_symbolicated.go  java_symbolicated_test.go  symbolicated.go
analyzer/core/mast/: BUILD.bazel  common.go  golang.go  java.go  walk.go
analyzer/core/mast/mastutil/: BUILD.bazel  accesspath.go  accesspath_test.go  java.go  java_test.go
analyzer/core/symbolication/: BUILD.bazel  common.go  common_test.go  generic.go  golang.go  golang_test.go  java.go  java_test.go  scope.go  symbol_table.go
analyzer/core/transformation/: BUILD.bazel  common.go  renamer.go
analyzer/core/translation/: BUILD.bazel  common.go  common_test.go  generic.go  generic_test.go  golang.go  golang_test.go  java.go  java_test.go  utils.go
analyzer/core/treesitter/: BUILD.bazel  treesitter.go  treesitter_test.go
analyzer/fallback/: BUILD.bazel  analyzer.go
analyzer/gomod/: BUILD.bazel  analyzer.go  ast_equivalence.go  ast_util.go
analyzer/protobuf/: BUILD.bazel  analyzer.go  ast_equivalence.go  ast_util.go
analyzer/sql/: BUILD.bazel  analyzer.go  ast_equivalence.go  ast_util.go
analyzer/starlark/: BUILD.bazel  analyzer.go  ast_equivalence.go  ast_util.go
analyzer/thrift/: BUILD.bazel  analyzer.go  ast_equivalence.go  ast_util.go
analyzer/yaml/: BUILD.bazel  analyzer.go  ast_equivalence.go  ast_util.go
(+754 files in other folders)
