#  Copyright (c) 2023 Uber Technologies, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
# gazelle:exclude testdata

go_library(
    name = "go_default_library",
    srcs = ["analyzer.go"],
    importpath = "analyzer",
    visibility = ["//visibility:public"],
    deps = [
        "//analyzer/common:go_default_library",
        "//analyzer/fallback:go_default_library",
        "@org_uber_go_multierr//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["analyzer_test.go"],
    data = [
        "//analyzer:testdata",
    ],
    embed = [":go_default_library"],
    deps = [
        "//analyzer/bazel:go_default_library",
        "//analyzer/core:go_default_library",
        "//analyzer/gomod:go_default_library",
        "//analyzer/protobuf:go_default_library",
        "//analyzer/sql:go_default_library",
        "//analyzer/starlark:go_default_library",
        "//analyzer/thrift:go_default_library",
        "//analyzer/yaml:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)

filegroup(
    name = "testdata",
    srcs = glob(["testdata/**"]),
    visibility = ["//visibility:public"],
)
